# teaAgent

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly-smoke.yml  release.yml  security.yml
.well-known/: mcp-server-card.json
docs/: USAGE.md  acceptance.md  architecture.md  audit-event.schema.json  audit-events.md  backlog-priority.md  cli.md  graphqlite-production.md  graphqlite.md  migration-top-level-api.md  p0-scope.md  p1-scope.md  p2-scope.md  p3-scope.md  provider-authoring.md  tool-authoring.md  use-case-matrix.html  use-case-matrix.md  use-cases.md
docs/adr/: 0001-p0-framework.md  0002-p1-primitives.md  0003-p2-code-mode-sandbox.md  0004-oauth-dpop.md  0005-mcp-streamable-http.md  0006-oauth-store-keyring.md  0007-anp-adapter-boundary.md
examples/: README.md  full_agent_run.py  mcp_client.py  tool_metadata.json
scripts/: build_acceptance_status.py  build_docs.py  build_use_case_matrix.py  provider_keys.zsh  provider_keys_keychain.zsh  providers_env.zsh  render_use_case_dashboard.py  run_acceptance_tier.py  sync_acceptance_tiers_doc.py  validate_docs_consistency.py
teaagent/: __init__.py  a2a_trace.py  acp_adapter.py  agentcard.py  aibom.py  anp_adapter.py  approval_ui.py  audit.py  audit_chain.py  audit_viewer.py  auto_mode.py  benchmark.py  browser_tools.py  budget.py  chat_agent.py  checkpoint.py  cli.py  code_mode.py  config_loader.py  context.py  errors.py  eval.py  eval_report.py  external_backends.py  file_policy.py  graph_rag.py  graphqlite_production.py  graphqlite_store.py  heartbeat.py  hooks.py  hybrid_search.py  intent.py  llm.py  llm_conformance.py  managed_runtime.py  mcp_client.py  mcp_http.py  mcp_server.py  mcp_tool_adapter.py  memory.py  (+32 more)
teaagent/cli/: __init__.py  __main__.py  _agent_parsers.py  _handlers.py  _mcp_parsers.py  _memory_parsers.py  _misc_parsers.py  _model_parsers.py
teaagent/code_analysis/: __init__.py  _client.py  _config.py  _graph_rag.py  _manager.py  _prompt.py  _tools.py  _treesitter.py  _types.py
teaagent/code_mode/: __init__.py  _child_process.py  _container.py  _isolate.py  _types.py  _validation.py
teaagent/llm/: __init__.py  _adapters.py  _config.py  _extract.py  _retry.py  _transport.py  _types.py
teaagent/llm_conformance/: __init__.py  _runner.py  _types.py
teaagent/mcp_http/: __init__.py  _oauth.py
teaagent/oauth21/: __init__.py  _dpop.py  _jwt.py  _pg_store.py  _pkce.py  _redis_store.py  _replay.py  _resource.py  _server.py  _store.py  _types.py
teaagent/runner/: __init__.py  _core.py  _types.py
teaagent/subagents/: __init__.py  _loader.py  _manager.py  _tools.py  _types.py
teaagent/telemetry/: __init__.py  _audit.py  _availability.py  _config.py  _metrics.py  _transport.py
teaagent/tui/: __init__.py  _commands.py
teaagent/workspace_tools/: __init__.py  _config.py  _files.py  _git.py  _helpers.py  _shell.py
tests/: conftest.py  test_a2a_http.py  test_a2a_registry.py  test_acceptance_status_builder.py  test_acceptance_tier_runner.py  test_agentcard.py  test_anp_adapter.py  test_audit.py  test_audit_viewer.py  test_auto_mode.py  test_browser_tools.py  test_budget.py  test_chat_agent.py  test_checkpoint.py  test_cli.py  test_code_analysis.py  test_code_analysis_client.py  test_code_analysis_manager.py  test_code_analysis_prompt.py  test_code_graph_integration.py  test_conformance_tiers.py  test_docs_consistency.py  test_errors.py  test_eval.py  test_external_backends.py  test_git_tools.py  test_graphqlite_production.py  test_graphqlite_store.py  test_hads_compliance.py  test_heartbeat.py  test_hooks.py  test_intent.py  test_latency_tier.py  test_llm.py  test_llm_conformance.py  test_llm_transport.py  test_lore_commit_formatter.py  test_low_coverage_modules.py  test_managed_runtime.py  test_managed_runtime_audit.py  (+39 more)
tests/acceptance/: test_a2a_federation_flow.py  test_agent_fix_test_review_flow.py  test_agents_md_injection_flow.py  test_anp_adapter_flow.py  test_audit_chain_integrity_flow.py  test_backend_adapter_flow.py  test_cancel_flow.py  test_code_analysis_prompt_injection_flow.py  test_cost_tracking_flow.py  test_daily_cli.py  test_daily_tui.py  test_error_remediation_flow.py  test_external_tool_manifest_compatibility_flow.py  test_first_run_experience_flow.py  test_live_provider_conformance_flow.py  test_managed_runtime_flow.py  test_mcp_client_flow.py  test_memory_auto_curation_flow.py  test_model_smoke_gating_flow.py  test_p0_slo_flow.py  test_plan_mode_read_only_flow.py  test_policy_as_code_flow.py  test_provider_matrix_consistency_flow.py  test_remote_mcp_consumption_flow.py  test_run_undo_acceptance_flow.py  test_session_resume_continuity_flow.py  test_skill_install_flow.py  test_ultrawork_flow.py  test_vscode_extension_mcp_boot_flow.py  test_vscode_mcp_runtime_smoke_flow.py  test_webhook_audit_flow.py  test_workspace_edit_flow.py
tests/e2e/: test_end_to_end.py
tests/integration/: test_a2a_circuit_breaker.py  test_a2a_traceparent.py  test_approval_ui.py  test_audit_chain.py  test_audit_sink_isolation.py  test_benchmark.py  test_cancel_token.py  test_config_loader.py  test_destructive_approval_lifecycle.py  test_disk_full_degradation.py  test_dpop_replay_concurrency.py  test_error_hints.py  test_eval_report.py  test_file_policy.py  test_mcp_tool_adapter.py  test_memory_retrieval_ranking.py  test_migration_dry_run.py  test_plugins.py  test_redaction_config.py  test_run_export.py  test_run_resume_checkpoint.py  test_run_undo.py  test_runner_cost_tracking.py  test_schema_migration_live.py  test_skill_loader.py  test_streaming_tool_calls.py  test_subagent_budget_inheritance.py  test_tool_rate_limit.py  (+2 more)
vscode/: package.json  tsconfig.json
(+20 files in other folders)
