[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teaagent"
version = "0.1.0"
description = "Minimal P0 agent harness with governance-first defaults."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
graphqlite = [
    "graphqlite>=0.4.4",
    "pysqlite3>=0.6.0",
]
oauth = [
    "cryptography>=3.4",
]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
dev = [
    "graphqlite>=0.4.4",
    "pysqlite3>=0.6.0",
    "cryptography>=3.4",
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1",
]

[project.scripts]
teaagent = "teaagent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = ["tests/"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "teaagent.cli._agent_parsers",
    "teaagent.cli._memory_parsers",
    "teaagent.cli._mcp_parsers",
    "teaagent.cli._misc_parsers",
    "teaagent.cli._model_parsers",
    "teaagent.code_mode",
    "teaagent.llm",
    "teaagent.llm_conformance",
    "teaagent.mcp_http",
    "teaagent.oauth21.*",
    "teaagent.telemetry",
    "teaagent.tui",
    "teaagent.workspace_tools",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
extend-exclude = [".git", ".teaagent", "__pycache__", ".pytest_cache", ".venv", "build", "dist"]
