[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teaagent"
version = "0.1.0"
description = "Minimal P0 agent harness with governance-first defaults."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["agent", "governance", "mcp", "audit", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[tool.setuptools.packages.find]
include = ["teaagent*"]

[tool.setuptools.package-data]
teaagent = ["py.typed"]

[project.optional-dependencies]
graphqlite = [
    "graphqlite>=0.4.4",
    "pysqlite3>=0.6.0",
]
oauth = [
    "cryptography>=3.4",
]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
dev = [
    "graphqlite>=0.4.4",
    "pysqlite3>=0.6.0",
    "cryptography>=3.4",
    "pre-commit>=3",
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1",
]

[project.scripts]
teaagent = "teaagent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = ["tests/"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true

[tool.ruff]
extend-exclude = [".git", ".teaagent", "__pycache__", ".pytest_cache", ".venv", "build", "dist"]
